k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wordpress.local  # <-- ESCOLHA O SEU NOME AQUI
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-lb # Nome do seu Service lá no wordpress.yaml
            port:
              number: 80
